--- a/index-engels.html
+++ b/index-engels.html
@@ -24,21 +24,11 @@
                     </div>
                     <ul>
                         <li><a href="#Text">Home</a></li>
-                        <li><a href="#services">Over Mij</a></li>
-                        <li><a href="#projects">Projecten</a></li>
+                        <li><a href="#services">About me</a></li>
+                        <li><a href="#projects">project</a></li>
                         <li><a href="#about">Github</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
-                    <div class="language">
-                        <div class="language-selected"> 
-                            pt-BR
-                        </div>
-                        <ul>
-                            <li><a href="#" class="NL">Nederlands</a></li>
-                            <li><a href="#" class="ENG">Engels</a></li>
-                            <li><a href="#" class="Ger">Duits</a></li>
-                        </ul>
-                    </div>
                 </div>
         </header>
 
@@ -56,27 +46,26 @@
     <section id="services">
         <div class="services container">
             <div class="service-top">
-                <h1 class="section-title">O<span>ver</span> mij</h1>
-                <p>Ik ben Halil Dogan. Ik ben 18 jaar oud en ik ben nu bezig met de opleiding Software Developer</p>
+                <h1 class="section-title">A<span>bout</span> Me</h1>
+                <p>I am Halil Dogan. I am 18 years old and I am now studying Software Developer</p>
             </div>
             <div class="service-bottom2">
                 <div class="kopjes">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png" /></div>
-                    <h2>Opleiding</h2>
-                    <p>Ik studeer op dit moment op het Media-College Amsterdam, heb nog 3 jaar tot ik ben afgestudeerd.
-                        Het vak wat ik studeer is Software Development.</p>
+                    <h2>Course</h2>
+                    <p>I am currently studying at the Media-College Amsterdam, I still have 3 years until I graduate.
+                        The subject I study is Software Development.</p>
                 </div>
                 <div class="kopjes">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/purposeful-man.png" /></div>
-                    <h2>Doel</h2>
-                    <p>Mijn doel is om zo goed mogelijk te studeren om genoeg kennis te kunnen opbouwen. Hoop dat ik dan
-                        bij de bedrijven waar ik werk goede resultaten toon</p>
+                    <h2>Purpose</h2>
+                    <p>My goal is to study as well as possible in order to build up enough knowledge. I hope then
+                        showing good results at the companies I work for`.</p>
                 </div>
                 <div class="kopjes">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png" /></div>
-                    <h2>Wat ik aanbied!</h2>
-                    <p>Ik Maak website / Logo / Dashboard / grafieken/ alles wat design vanweb enzovoort betreft. Ik
-                        denk ook mee met optie waar de klanten mee komen.</p>
+                    <h2>What I offer!</h2>
+                    <p>I make website / Logo / Dashboard / charts / everything related to web design and so on. I also think along with options that customers come up with.</p>
                 </div>
                 <div class="kopjes">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
@@ -91,17 +80,17 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Recent <span>Projecten</span></h1>
+                <h1 class="section-title">Recent <span>Projects</span></h1>
             </div>
             <div class="all-projects">
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 1</h1>
                         <h2>Museum Online</h2>
-                        <p>Dit is gemaakt in de 2 Periode van mijn opleiding</p>
+                        <p>This was made in the 2 Period of my training</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/d1.png" alt="img">
+                        <a href="33289.hosts1.ma-cloud.nl/BO-Opdracht/Website/"> <img src="./img/d1.png" alt="img"></a>
                     </div>
                 </div>
                 <div class="project-item">
