--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p>Dit is gemaakt in de 2 Periode van mijn opleiding</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/d1.png" alt="img">
+                        <a href="33289.hosts1.ma-cloud.nl/BO-Opdracht/Website/"> <img src="./img/d1.png" alt="img"></a>
                     </div>
                 </div>
                 <div class="project-item">
