--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="discription" content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Designhd.nl</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
     <script src="js/main-back-to-top.js" defer></script>
+    <script src=".vscode/settings.json" defer></script>
 </head>
 
 <body>
@@ -26,8 +28,10 @@
                         <li><a href="#Text">Home</a></li>
                         <li><a href="#services">Over Mij</a></li>
                         <li><a href="#projects">Projecten</a></li>
+                        <li><a href="#services">Web Services</a></li>
                         <li><a href="#about">Github</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="index-inlog.html">Inlog</a></li>
                     </ul>
                 </div>
         </header>
@@ -149,6 +153,39 @@
         </div>
     </section>
 
+    <section id="services">
+        <div class="services container">
+            <div class="service-top">
+                <h1 class="section-title">O<span>ver</span> mij</h1>
+                <p>Ik ben Halil Dogan. Ik ben 18 jaar oud en ik ben nu bezig met de opleiding Software Developer</p>
+            </div>
+            <div class="service-bottom2">
+                <div class="kopjes">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png" /></div>
+                    <h2>Opleiding</h2>
+                    <p>Ik studeer op dit moment op het Media-College Amsterdam, heb nog 3 jaar tot ik ben afgestudeerd.
+                        Het vak wat ik studeer is Software Development.</p>
+                </div>
+                <div class="kopjes">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/purposeful-man.png" /></div>
+                    <h2>Doel</h2>
+                    <p>Mijn doel is om zo goed mogelijk te studeren om genoeg kennis te kunnen opbouwen. Hoop dat ik dan
+                        bij de bedrijven waar ik werk goede resultaten toon</p>
+                </div>
+                <div class="kopjes">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png" /></div>
+                    <h2>Wat ik aanbied!</h2>
+                    <p>Ik Maak website / Logo / Dashboard / grafieken/ alles wat design vanweb enzovoort betreft. Ik denk ook mee met optie waar de klanten mee komen.</p>
+                </div>
+                <div class="kopjes">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+                    <h2></h2>
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section id="about">
         <div class="about container">
@@ -178,15 +215,14 @@
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
                     <div class="contact-info">
                         <h1>Phone</h1>
-                        <h2>+31 6 15-52-73-84</h2>
+                        <h2>+31 (0)6 15527384</h2>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
                     <div class="contact-info">
                         <h1>Email</h1>
-                        <h2>33289@ma-web.nl</h2>
-                        <h2>Doganhalil7070@gmail.com</h2>
+                        <h2>Info@designhd.nl</h2>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -212,7 +248,7 @@
                             src="https://img.icons8.com/bubbles/100/000000/github.png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+                    <a href="https://www.linkedin.com/in/halil-dogan-9016b91a4/"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png" /></a>
                 </div>
                 <div class="social-item">
                     <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
