beetje de website geoptimaliseerd

--- a/index-inlog.html
+++ b/index-inlog.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+<header>
+    <ul>
+        <a href="index.html"><img src="img/logo.png" alt="logo website"></a>
+    </ul>
+</header>
     
     <h2>Login in Uw account / Maak uw Persoonlijke account aan</h2>
     <div class="container" id="container">
