--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="discription" content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
+    <meta name="discription"
+        content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designhd.nl</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
-    <script src="js/main-back-to-top.js" defer></script>
     <script src=".vscode/settings.json" defer></script>
 </head>
 
@@ -17,9 +17,8 @@
 
     <section id="Text">
         <header>
-
             <div class="navbar">
-                <img src="img/logo.png" class="logo">
+                <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
                 <div class="nav-list">
                     <div class="hamburger">
                         <div class="bar"></div>
@@ -28,12 +27,13 @@
                         <li><a href="#Text">Home</a></li>
                         <li><a href="#services">Over Mij</a></li>
                         <li><a href="#projects">Projecten</a></li>
-                        <li><a href="#services">Web Services</a></li>
+                        <li><a href="#services2">Web Services</a></li>
                         <li><a href="#about">Github</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="index-inlog.html">Inlog</a></li>
                     </ul>
                 </div>
+
         </header>
 
         <div class="Text container">
@@ -55,26 +55,33 @@
             </div>
             <div class="service-bottom2">
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png" /></div>
-                    <h2>Opleiding</h2>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png" alt="icons" />
+                    </div>
+                    <h2>Opleiding!</h2>
                     <p>Ik studeer op dit moment op het Media-College Amsterdam, heb nog 3 jaar tot ik ben afgestudeerd.
                         Het vak wat ik studeer is Software Development.</p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/purposeful-man.png" /></div>
-                    <h2>Doel</h2>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/purposeful-man.png"
+                            alt="icons" /></div>
+                    <h2>Doel!</h2>
                     <p>Mijn doel is om zo goed mogelijk te studeren om genoeg kennis te kunnen opbouwen. Hoop dat ik dan
                         bij de bedrijven waar ik werk goede resultaten toon</p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png" /></div>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png" alt="icons" />
+                    </div>
                     <h2>Wat ik aanbied!</h2>
-                    <p>Ik Maak website / Logo / Dashboard / grafieken/ alles wat design vanweb enzovoort betreft. Ik denk ook mee met optie waar de klanten mee komen.</p>
+                    <p>Ik Maak website / Logo / Dashboard / grafieken/ alles wat design vanweb enzovoort betreft. Ik
+                        denk ook mee met optie waar de klanten mee komen.</p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2></h2>
-                    <p></p>
+                    <div class="icon"><img
+                            src="https://img.icons8.com/external-smashingstocks-circular-smashing-stocks/100/000000/external-studying-education-smashingstocks-circular-smashing-stocks-2.png"
+                            alt="icons" /></div>
+                    <h2>Vrije Tijd!</h2>
+                    <p>In mijn vrije tijd ben ik bezig met meer kennis op te bouwen en mijn mind te vergroten. Ik ben
+                        bezig om kennis op te bouwen voor op alles te laten weten</p>
                 </div>
             </div>
         </div>
@@ -153,34 +160,42 @@
         </div>
     </section>
 
-    <section id="services">
-        <div class="services container">
+    <section id="services2">
+        <div class="services2 container">
             <div class="service-top">
-                <h1 class="section-title">O<span>ver</span> mij</h1>
-                <p>Ik ben Halil Dogan. Ik ben 18 jaar oud en ik ben nu bezig met de opleiding Software Developer</p>
+                <h1 class="section-title">W<span>eb</span> Services</h1>
+                <p></p>
             </div>
             <div class="service-bottom2">
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png" /></div>
-                    <h2>Opleiding</h2>
-                    <p>Ik studeer op dit moment op het Media-College Amsterdam, heb nog 3 jaar tot ik ben afgestudeerd.
-                        Het vak wat ik studeer is Software Development.</p>
+                    <div class="icon"><img src="https://img.icons8.com/stickers/100/000000/domain.png" alt="icons" />
+                    </div>
+                    <h2>website</h2>
+                    <p>Ik maak een speciaal website op keuze. Ik denk mee met uw en maken we er iets profesioneels van,
+                        ben nu bezig met me opleiding en doe dit erbij. Voor meer Informatie Contacteer mij.</p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/purposeful-man.png" /></div>
-                    <h2>Doel</h2>
-                    <p>Mijn doel is om zo goed mogelijk te studeren om genoeg kennis te kunnen opbouwen. Hoop dat ik dan
-                        bij de bedrijven waar ik werk goede resultaten toon</p>
+                    <div class="icon"><img src="https://img.icons8.com/dusk/100/000000/apple-app-store--v1.png"
+                            alt="icons" /></div>
+                    <h2>App</h2>
+                    <p>Ik maak ook een app voor klanten die bijvoorbeeld de aantal gewerkte uren wilt kunnen tonen per
+                        personeel. Wilt uw ook een handige app contacteer mij? denk mee met uw aan de design en opties.
+                    </p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png" /></div>
-                    <h2>Wat ik aanbied!</h2>
-                    <p>Ik Maak website / Logo / Dashboard / grafieken/ alles wat design vanweb enzovoort betreft. Ik denk ook mee met optie waar de klanten mee komen.</p>
+                    <div class="icon"><img
+                            src="https://img.icons8.com/external-flaticons-flat-circular-flat-icons/100/000000/external-design-engineering-flaticons-flat-circular-flat-icons.png"
+                            alt="icons" /></div>
+                    <h2>Design</h2>
+                    <p>Ik ontwerp ook volgens u keuze en ideeen logo's en ben heel erg goed in het denk tot een nieuwe
+                        universum plannen. Vergeet mij niet te contacteren voor uw design voor u bedrijf of dergelijk
+                    </p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2></h2>
-                    <p></p>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="icons" />
+                    </div>
+                    <h2>Algemeen</h2>
+                    <p>awe</p>
                 </div>
             </div>
         </div>
@@ -200,7 +215,7 @@
                 <p>Dit is mijn Github profiel. Hier kunnen jullie mijn projecten en al mijn werk vinden.
 
                 </p>
-                <a img="" href="https://github.com/HalilDogan7007" class="cta">Github</a>
+                <a href="https://github.com/HalilDogan7007" class="cta">Github</a>
             </div>
         </div>
     </section>
@@ -212,21 +227,24 @@
             </div>
             <div class="contact-items">
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" alt="icons" />
+                    </div>
                     <div class="contact-info">
                         <h1>Phone</h1>
                         <h2>+31 (0)6 15527384</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" alt="icons" />
+                    </div>
                     <div class="contact-info">
                         <h1>Email</h1>
                         <h2>Info@designhd.nl</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" alt="icons" />
+                    </div>
                     <div class="contact-info">
                         <h1>Address</h1>
                         <h2>Contactweg, Amsterdam, Nederland</h2>
@@ -244,14 +262,15 @@
             <h2>U complete web Design en oplossing</h2>
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="https://github.com/HalilDogan7007"><img
-                            src="https://img.icons8.com/bubbles/100/000000/github.png" /></a>
+                    <a href="https://github.com/HalilDogan7007">
+                        <img src="https://img.icons8.com/bubbles/100/000000/github.png" alt="icons" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="https://www.linkedin.com/in/halil-dogan-9016b91a4/"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png" /></a>
+                    <a href="https://www.linkedin.com/in/halil-dogan-9016b91a4/"><img
+                            src="https://img.icons8.com/bubbles/100/000000/linkedin.png" alt="icons" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+                    <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" alt="icons" /></a>
                 </div>
             </div>
             <p>Copyright © 2022 Halil. All rights reserved</p>
