--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="discription"
-        content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
+    <meta name="discription" content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=google">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Halil Dogan">
     <title>Designhd.nl</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
