--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Halil Dogan">
+    <meta name="google-site-verification" content="cUA9zwSuXZyJ1f1qvB2D4XDRX-_eaIJXSq41Fhorbeo" />
     <title>Designhd.nl</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
@@ -18,7 +19,7 @@
 <body>
 
     <section id="Text">
-        <header>
+        <header >
             <div class="navbar">
                 <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
                 <div class="nav-list">
@@ -192,12 +193,6 @@
                     <p>Ik ontwerp ook volgens u keuze en ideeen logo's en ben heel erg goed in het denk tot een nieuwe
                         universum plannen. Vergeet mij niet te contacteren voor uw design voor u bedrijf of dergelijk
                     </p>
-                </div>
-                <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="icons" />
-                    </div>
-                    <h2>Algemeen</h2>
-                    <p>awe</p>
                 </div>
             </div>
         </div>
