--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="discription" content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
+    <meta name="discription"
+        content="Ik ben Halil Ben Web Developer en ben nog bezig met studeren voor meer informatie bezoek mijn portfolio vind u meer informatie">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=google">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Halil Dogan">
-    <meta name="google-site-verification" content="cUA9zwSuXZyJ1f1qvB2D4XDRX-_eaIJXSq41Fhorbeo" />
     <title>Designhd.nl</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
@@ -18,9 +18,10 @@
 
 <body>
 
-    <section id="Text">
-        <header >
-            <div class="navbar">
+
+    
+        <header id="Text">
+            <nav class="navbar">
                 <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
                 <div class="nav-list">
                     <div class="hamburger">
@@ -35,30 +36,32 @@
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="index-inlog.html">Inlog</a></li>
                     </ul>
-                </div>
+            </nav>
 
         </header>
-
-        <div class="Text container">
-            <div>
-                <h1>Hello, <span></span></h1>
-                <h1>My Name is <span></span></h1>
-                <h1>Halil <span></span></h1>
-                <a href="#projects" type="button" class="cta">Portfolio</a>
+        <main>
+            <section id="Text">
+            <div class="Text container">
+                <div>
+                    <h2>Hello, <span></span></h2>
+                    <h2>My Name is <span></span></h2>
+                    <h1>Halil <span></span></h1>
+                    <a href="#projects" type="button" class="cta">Portfolio</a>
+                </div>
             </div>
-        </div>
     </section>
 
 
     <section id="services">
         <div class="services container">
             <div class="service-top">
-                <h1 class="section-title">O<span>ver</span> mij</h1>
+                <h2 class="section-title">O<span>ver</span> mij</h2>
                 <p>Ik ben Halil Dogan. Ik ben 18 jaar oud en ik ben nu bezig met de opleiding Software Developer</p>
             </div>
             <div class="service-bottom2">
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png" alt="icons" />
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/education.png"
+                            alt="Icoontje met een hoedje voor opleiding" />
                     </div>
                     <h2>Opleiding!</h2>
                     <p>Ik studeer op dit moment op het Media-College Amsterdam, heb nog 3 jaar tot ik ben afgestudeerd.
@@ -66,13 +69,14 @@
                 </div>
                 <div class="kopjes">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/purposeful-man.png"
-                            alt="icons" /></div>
+                            alt="Icoontje van een leerling die zijn doel heeft behaald." /></div>
                     <h2>Doel!</h2>
                     <p>Mijn doel is om zo goed mogelijk te studeren om genoeg kennis te kunnen opbouwen. Hoop dat ik dan
                         bij de bedrijven waar ik werk goede resultaten toon</p>
                 </div>
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png" alt="icons" />
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/discount.png"
+                            alt="Icoonje met een procent teken." />
                     </div>
                     <h2>Wat ik aanbied!</h2>
                     <p>Ik Maak website / Logo / Dashboard / grafieken/ alles wat design vanweb enzovoort betreft. Ik
@@ -81,7 +85,7 @@
                 <div class="kopjes">
                     <div class="icon"><img
                             src="https://img.icons8.com/external-smashingstocks-circular-smashing-stocks/100/000000/external-studying-education-smashingstocks-circular-smashing-stocks-2.png"
-                            alt="icons" /></div>
+                            alt="Icoontje met boeken en een wekker erop" /></div>
                     <h2>Vrije Tijd!</h2>
                     <p>In mijn vrije tijd ben ik bezig met meer kennis op te bouwen en mijn mind te vergroten. Ik ben
                         bezig om kennis op te bouwen voor op alles te laten weten</p>
@@ -94,22 +98,43 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Recent <span>Projecten</span></h1>
+                <h2 class="section-title">Recent <span>Projecten</span></h2>
             </div>
             <div class="all-projects">
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 1</h1>
+                        <h2>Project 1</h2>
                         <h2>Museum Online</h2>
                         <p>Dit is gemaakt in de 2 Periode van mijn opleiding</p>
                     </div>
                     <div class="project-img">
-                        <a href="33289.hosts1.ma-cloud.nl/BO-Opdracht/Website/"> <img src="./img/d1.png" alt="img"></a>
+                        <a href="https://33289.hosts1.ma-cloud.nl/BO-Opdracht/Website/"> <img src="/img/museum).webp"
+                                alt="Img van mijn project van periode 2 over museum scheepvaart."></a>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 2</h1>
+                        <h2>Project 2</h2>
+                        <h2>Pikmin Bloom</h2>
+                        <p>Dit moesten we maken voor FRO als opdrachten om dingen te begrijpen en te kunnen behandelen op onze BO opdrachten.</p>
+                    </div>
+                    <div class="project-img">
+                       <a href="https://33289.hosts1.ma-cloud.nl/web"> <img src="/img/Bloom.webp" alt="img"></a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h2>Project 3</h2>
+                        <h2>Dashboard BO</h2>
+                        <p>Moest een Dashboard maken voor een zuinige en groene woning dat je alle verbruik en alles moest zien.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="/img/Bo-Dashboard.webp" alt="img">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h2>Project 4</h2>
                         <h2>Coding is Love</h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum
                             impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo
@@ -122,33 +147,7 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Project 3</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum
-                            impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo
-                            neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
-                    </div>
-                    <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
-                    </div>
-                </div>
-                <div class="project-item">
-                    <div class="project-info">
-                        <h1>Project 4</h1>
-                        <h2>Coding is Love</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum
-                            impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo
-                            neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
-                    </div>
-                    <div class="project-img">
-                        <img src="./img/img-1.png" alt="img">
-                    </div>
-                </div>
-                <div class="project-item">
-                    <div class="project-info">
-                        <h1>Project 5</h1>
+                        <h2>Project 5</h2>
                         <h2>Coding is Love</h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum
                             impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo
@@ -166,12 +165,13 @@
     <section id="services2">
         <div class="services2 container">
             <div class="service-top">
-                <h1 class="section-title">W<span>eb</span> Services</h1>
+                <h2 class="section-title">W<span>eb</span> Services</h2>
                 <p></p>
             </div>
             <div class="service-bottom2">
                 <div class="kopjes">
-                    <div class="icon"><img src="https://img.icons8.com/stickers/100/000000/domain.png" alt="icons" />
+                    <div class="icon"><img src="https://img.icons8.com/stickers/100/000000/domain.png"
+                            alt="Icoontje met www op van een website" />
                     </div>
                     <h2>website</h2>
                     <p>Ik maak een speciaal website op keuze. Ik denk mee met uw en maken we er iets profesioneels van,
@@ -179,7 +179,7 @@
                 </div>
                 <div class="kopjes">
                     <div class="icon"><img src="https://img.icons8.com/dusk/100/000000/apple-app-store--v1.png"
-                            alt="icons" /></div>
+                            alt="Icoontje met de app store logo" /></div>
                     <h2>App</h2>
                     <p>Ik maak ook een app voor klanten die bijvoorbeeld de aantal gewerkte uren wilt kunnen tonen per
                         personeel. Wilt uw ook een handige app contacteer mij? denk mee met uw aan de design en opties.
@@ -188,7 +188,7 @@
                 <div class="kopjes">
                     <div class="icon"><img
                             src="https://img.icons8.com/external-flaticons-flat-circular-flat-icons/100/000000/external-design-engineering-flaticons-flat-circular-flat-icons.png"
-                            alt="icons" /></div>
+                            alt="Icoontje met design verbindingen" /></div>
                     <h2>Design</h2>
                     <p>Ik ontwerp ook volgens u keuze en ideeen logo's en ben heel erg goed in het denk tot een nieuwe
                         universum plannen. Vergeet mij niet te contacteren voor uw design voor u bedrijf of dergelijk
@@ -203,11 +203,11 @@
         <div class="about container">
             <div class="col-left">
                 <div class="about-img">
-                    <img src="img/qr-git.png" alt="img">
+                    <img src="img/qr-git.png" alt="Img wr code van me github">
                 </div>
             </div>
             <div class="col-right">
-                <h1 class="section-title">GitHub</h1>
+                <h2 class="section-title">GitHub</h2>
                 <h2>Github Repostories</h2>
                 <p>Dit is mijn Github profiel. Hier kunnen jullie mijn projecten en al mijn werk vinden.
 
@@ -220,30 +220,33 @@
     <section id="contact">
         <div class="contact container">
             <div>
-                <h1 class="section-title">Contact <span>info</span></h1>
+                <h2 class="section-title">Contact <span>info</span></h2>
             </div>
             <div class="contact-items">
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" alt="icons" />
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"
+                            alt="Icoontje met een telfoon erop" />
                     </div>
                     <div class="contact-info">
-                        <h1>Phone</h1>
+                        <h2>Phone</h2>
                         <h2>+31 (0)6 15527384</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" alt="icons" />
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"
+                            alt="Icoontje met een mail formulier" />
                     </div>
                     <div class="contact-info">
-                        <h1>Email</h1>
+                        <h2>Email</h2>
                         <h2>Info@designhd.nl</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" alt="icons" />
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"
+                            alt="Icoontje met een kaart erop" />
                     </div>
                     <div class="contact-info">
-                        <h1>Address</h1>
+                        <h2>Address</h2>
                         <h2>Contactweg, Amsterdam, Nederland</h2>
                     </div>
                 </div>
@@ -254,25 +257,28 @@
     <section id="footer">
         <div class="footer container">
             <div class="brand">
-                <h1><span>H</span>alil <span>D</span>ogan</h1>
+                <h2><span>H</span>alil <span>D</span>ogan</h2>
             </div>
             <h2>U complete web Design en oplossing</h2>
             <div class="social-icon">
                 <div class="social-item">
                     <a href="https://github.com/HalilDogan7007">
-                        <img src="https://img.icons8.com/bubbles/100/000000/github.png" alt="icons" /></a>
+                        <img src="https://img.icons8.com/bubbles/100/000000/github.png" alt="Icoontje van github" /></a>
                 </div>
                 <div class="social-item">
                     <a href="https://www.linkedin.com/in/halil-dogan-9016b91a4/"><img
-                            src="https://img.icons8.com/bubbles/100/000000/linkedin.png" alt="icons" /></a>
+                            src="https://img.icons8.com/bubbles/100/000000/linkedin.png"
+                            alt="Icoontje van linkedin" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" alt="icons" /></a>
+                    <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"
+                            alt="Icoontje van twitter" /></a>
                 </div>
             </div>
             <p>Copyright © 2022 Halil. All rights reserved</p>
         </div>
     </section>
+    </main>
 
 
 </body>
