gewerkt aan alles en nieuwe link trello erin gezet

--- a/index-engels.html
+++ b/index-engels.html
@@ -13,25 +13,28 @@
 
 <body>
 
-    <section id="Text">
-        <header>
-
-            <div class="navbar">
-                <img src="img/logo.png" class="logo">
+    
+        <header id="Text">
+            <nav class="navbar">
+                <a href="index.html"><img src="img/logo.png" alt="logo" class="logo"></a>
                 <div class="nav-list">
                     <div class="hamburger">
                         <div class="bar"></div>
                     </div>
                     <ul>
                         <li><a href="#Text">Home</a></li>
-                        <li><a href="#services">About me</a></li>
-                        <li><a href="#projects">project</a></li>
+                        <li><a href="#services">Over Mij</a></li>
+                        <li><a href="#projects">Projecten</a></li>
+                        <li><a href="#services2">Web Services</a></li>
                         <li><a href="#about">Github</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="index-inlog.html">Inlog</a></li>
+                        <li><a href="in">Engels</a></li>
                     </ul>
-                </div>
+            </nav>
+    
         </header>
-
+        <section id="Text"> 
         <div class="Text container">
             <div>
                 <h1>Hello, <span></span></h1>
