mail formulier aangepast en mail.php gemaakt

--- a/index-engels.html
+++ b/index-engels.html
@@ -29,7 +29,7 @@
                         <li><a href="#about">Github</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="index-inlog.html">Inlog</a></li>
-                        <li><a href="in">Engels</a></li>
+                        <li><a href="index.html">Netherlands</a></li>
                     </ul>
             </nav>
     
@@ -163,7 +163,6 @@
             <div class="col-right">
                 <h1 class="section-title">GitHub</h1>
                 <h2>Github Repostories</h2>
-                <p>Dit is mijn Github profiel. Hier kunnen jullie mijn projecten en al mijn werk vinden.
 
                 </p>
                 <a img="" href="https://github.com/HalilDogan7007" class="cta">Github</a>
