spraak naar tekst

--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
     <script src="js/main.js" defer></script>
     <script src=".vscode/settings.json" defer></script>
     <script src="js/speak.js" defer></script>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXX-Y', 'auto');
-        ga('send', 'pageview');
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview');
     </script>
 
 
@@ -247,9 +246,11 @@
             </div>
         </section>
 
+        <div class="projects-header">
+            <h2 class="section-title">Recente <span>Projecten</span></h2>
+        </div>
 
         <div class="formulier">
-
             <div id="formulier2">
                 <h3 class="fcf-h3">Contact us</h3>
 
