--- a/index-engels.html
+++ b/index-engels.html
@@ -15,16 +15,16 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer></script>
     <script src=".vscode/settings.json" defer></script>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-XXXXX-Y', 'auto');
-        ga('send', 'pageview');
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview');
     </script>
+
     
 
 </head>
@@ -49,7 +49,7 @@
                 <li><a href="#about" data-after="Contact">Github</a></li>
                 <li><a href="#formulier2" data-after="Contact">Forms</a></li>
                 <li><a href="#contact" data-after="Contact">Contact</a></li>
-                <li><a href="index.html" data-after="Contact">Nederlands</a></li>
+                <li><a href="index.html" data-after="Contact">Netherlands</a></li>
               </ul>
             </div>
           </div>
@@ -75,7 +75,7 @@
         <section id="services">
             <div class="services container">
                 <div class="service-top">
-                    <h2 class="section-title">O<span>ver</span> mij</h2>
+                    <h2 class="section-title"><span>About</span> me</h2>
                     <p>I am Halil Dogan. I am 18 years old and I am now studying Software Developer.</p>
                 </div>
                 <div class="service-bottom2">
@@ -120,7 +120,7 @@
         <section id="projects">
             <div class="projects container">
                 <div class="projects-header">
-                    <h2 class="section-title">Recent <span>Projects</span></h2>
+                    <h2 class="section-title">Current <span>Projects</span></h2>
                 </div>
                 <div class="all-projects">
                     <div class="project-item">
@@ -333,7 +333,7 @@
         <section id="footer">
             <div class="footer container">
                 <div class="brand">
-                    <h2><span>H</span>alil <span>D</span>ogan</h2>
+                    <h2><span></span>Halil <span></span>Dogan</h2>
                 </div>
                 <h2>
                     Your Complete Web Design and Solution</h2>
