--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <div class="project-img">
                             <a href="http://33289.hosts1.ma-cloud.nl/Grid/"> <img src="img/dashboard2.webp" alt="een fot van een dashboard"></a>
                         </div>
-                    </div>Grid
+                    </div>
                 </div>
             </div>
         </section>
