--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2>Welkom Bij <span></span></h2>
                     <h1>Halil Web-Developer <span></span></h1>
                     <a href="#projects" type="button" class="cta">Portfolio</a>
-                    <button onclick="startRecognition()">Speech to text</button>
+                    <button onclick="startRecognition()">Spraak naar tekst</button>
                     <div id="result" class="hide"></div>
                     <div><img id="image1" class="hide"></div>
                 </div>
@@ -198,10 +198,9 @@
                                 alt="Icoontje met www op van een website" />
                         </div>
                         <h2>website</h2>
-                        <p>Ik maak een speciaal website op keuze. Ik denk mee met uw en maken we er iets profesioneels
-                            van,
-                            ben nu bezig met me opleiding en doe dit erbij. Voor meer Informatie Contacteer mij voor u
-                            producten.</p>
+                        <p>Ik maak speciale websites op keuze. Ik denk mee met de klant en maak een mooie website,
+                            op dit moment studeer ik nog. Voor meer Informatie contacteer mij voor uw
+                            Keuze.</p>
                     </div>
                     <div class="kopjes">
                         <div class="icon"><img src="https://img.icons8.com/dusk/100/000000/apple-app-store--v1.png"
@@ -247,24 +246,24 @@
         </section>
 
         <div class="projects-header">
-            <h2 class="section-title">Recente <span>Projecten</span></h2>
+            <h2 class="section-title">Contact <span>Formulier</span></h2>
         </div>
 
         <div class="formulier">
             <div id="formulier2">
-                <h3 class="fcf-h3">Contact us</h3>
+                <h3 class="fcf-h3">Contact ons</h3>
 
                 <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
 
                     <div class="Formulier3">
-                        <label for="Name" class="fcf-label">Your name</label>
+                        <label for="Name" class="fcf-label">Uw naam</label>
                         <div class="fcf-input-group">
                             <input type="text" id="Name" name="Name" class="fcf-form-control" required>
                         </div>
                     </div>
 
                     <div class="Formulier3">
-                        <label for="Email" class="fcf-label">Your email address</label>
+                        <label for="Email" class="fcf-label">Uw mail adres</label>
                         <div class="fcf-input-group">
                             <input type="email" id="Email" name="Email" class="fcf-form-control" required>
                         </div>
@@ -303,7 +302,7 @@
                                 alt="Icoontje met een telfoon erop" />
                         </div>
                         <div class="contact-info">
-                            <h2>Phone</h2>
+                            <h2>Telefoon-nummer</h2>
                             <h2>+31 (0)6 15527384</h2>
                         </div>
                     </div>
@@ -348,7 +347,7 @@
                                 alt="Icoontje van linkedin" /></a>
                     </div>
                     <div class="social-item">
-                        <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"
+                        <a href="https://www.ma-web.nl/"><img src="https://img.icons8.com/bubbles/100/undefined/podcast.png"
                                 alt="Icoontje van twitter" /></a>
                     </div>
                 </div>
